lab1/Test/L1-A-7-72.output
Error Type A at Line 25
Error Type A at Line 37
Error Type A at Line 42
Error Type A at Line 45
