lab1/Test/L1-A-7-72.cmm
int ;
int ;
int ;
int cGENFIMPcP ( struct t5O6TqLguuq9hK {
}S_C0wUl5tb_OW4xeb , struct WU9xqMGAyTTVEr02 S ) {
  if ( TCf )   ipWojLv ;
else   DyeywbEYgOQf ;

  if ( QP )   while ( GGVIgfN )   if ( J87GnTDkbFI7bfXGz 
    )   QStcdOuQcch ;
else {
    struct {
    }IZzYktBrMSXL ;
    while ( Ee8mkaIpGCNx4 )     if ( Lb8UYUGDx6ULG 
      )     oAmro ;
else     if ( Aoi2NuhXqhR1Ht9p )     while ( JyHKQ 
      )     DwkUqfG9jj ;

else     bkchFQ4sKtZ0fmX ;



  }

else   if ( CwpGAVOk2GA )   return nNqC \;


}
int ;
int x_9z7n2lpkbOl ( ) {
  int Bmy8B , W_Abv0vWN = YReF2pFS7lmE7Lko ;
  sVK && s8IQeq_ >= W - V_0qYQgcVGn / dXI8LBF9V1MmI 
    ( gp , ytYUFyfxNZN7 = LBblmh_XLqQT7ELLS4PZ = JmLLPZiYE 
    || bT50XH <= rWZqtps * - gbHs8 [ Ci5M != IZklP2 / 
    ( fp < wk7DQjjM6fUUo_fW2nE8 - CDKhB / ! ! - ( WMI6HXMvdacV1 
    == ( _np_6f52dE || NDsgyr2_af3K ) . ypNq0 . exQJ5 
    ) ) '> 1283895803 . uNJrTAJK0fuE3p - JrnhxvL9s2l2xuNhnr 
    + - 1424422593.139960880 . WA5l8AeLLf0x ] ) + ! - 
    lmZYm ( ) ;
}
struct Lonq_YoAfmAOq ;
float ulSjX8K , nemjncKgMNaNs89Kd '[ 2136341249 ] 

;
`